data/all_generated_tests/raw_wast_tests/call_indirect_ImproperFunctionCallorReturnHandling_4483.wast
;; 2. **Test Description**: Use `call_indirect` to call a function with fewer parameters than required by the actual called function type, checking if the stack underflow is correctly reported and trapped.    - **Constraint Checked**: Stack operations and operand handling.    - **Relation to Improper Handling**: Prevents calling a function with inadequate arguments leading to unintended behavior.

(assert_invalid
  (module
    (type $sig (func (param i32 i32)))
    (table 1 funcref)
    (elem (i32.const 0) $f)
    (func $f (param i32 i32))
    (func $main
      (call_indirect (type $sig) (i32.const 0) (i32.const 1))
    )
  )
  "stack underflow"
)